Fixed "jumping mainnav" bug, closes #29

--- a/src/templates/joomlade/assets/less/joomlade/imports/navigation.less
+++ b/src/templates/joomlade/assets/less/joomlade/imports/navigation.less
@@ -237,6 +237,7 @@ body.shownav #mainnav {
   #mainnav {
     height: auto;
     width: auto;
+    margin: 0;
     right: (@grid-gutter-width / 2);
     top: 30px;
     overflow: visible;
