--- a/src/templates/joomlade/css/joomlade.css
+++ b/src/templates/joomlade/css/joomlade.css
@@ -9044,6 +9044,7 @@ body.shownav #mainnav ul.menu li.module {
   #mainnav {
     height: auto;
     width: auto;
+    margin: 0;
     right: 15px;
     top: 30px;
     overflow: visible;
